--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TMDB API 테스트</title>
+  <title>영화검색사이트</title>
 </head>
 <body>
   <h1>TMDB API 테스트</h1>
