--- a/index.html
+++ b/index.html
@@ -4,50 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>영화검색사이트</title>
+  <link rel="stylesheet" href="main.css">
 </head>
-<style>
-  .movieContainer-style{
-    border: 1px solid black;
-    float:left;
-    padding: 50px;
-    width: 25%;
-    height: 500px;
-    overflow : hidden
-  }
-  .overview-style {
-    font-size: 15px;
-  }
-
-  .img-style {
-    width: 150px;
-  }
-
-  .search-container {
-    text-align: center;
-  }
-
-  .badge {
-    margin-right: 50px;
-    border: 1px solid black;
-    padding: 10px;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-  .dark{
-background-color: black;
-color:white;
-}
-  .normal{
-    background-color: lightgrey;
-    color: black;
-  }
-
-</style>
 
 <body id = 'body' class="normal">
-  <br><br><br>
+  <img src="./imgs/front_1.jpeg" class='front-img'>
+  <img src="./imgs/front_2.jpeg" class='front-img'>
+  <img src="./imgs/front_3.png" class='front-img'>
+  <img src="./imgs/front_4.jpg" class='front-img'>
+  <br><br style="clear:both"><br><br>
 <div class="search-container">
-    <span style="font-size: 30px;">영화 제목: &nbsp </span>
+    <span>영화 제목: &nbsp </span>
     <input id="searchInput" type="text" placeholder="영화 제목">
     <button id="searchButton">검색</button>
 </div>
