--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <img src="./imgs/front_2.jpeg" class='front-img'>
   <img src="./imgs/front_3.png" class='front-img'>
   <img src="./imgs/front_4.jpg" class='front-img'>
-  <br><br style="clear:both"><br><br>
-<div class="search-container">
+  <br><br style="clear:both"><br>
+<div class="search-container bottom-line1" id ='search-container'>
     <span>영화 제목: &nbsp </span>
     <input id="searchInput" type="text" placeholder="영화 제목">
     <button id="searchButton">검색</button>
 </div>
 
-<br><br>
-
+<br>
 <div style="float:right">
 
   <span class="badge bg-dark" id="badage">Dark 🔄</span>
