--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body id = 'body' class="normal">
+   
+
+
+  <div class="content" id="content">
+
   <img src="./imgs/front_1.jpeg" class='front-img'>
   <img src="./imgs/front_2.jpeg" class='front-img'>
   <img src="./imgs/front_3.png" class='front-img'>
@@ -30,6 +35,13 @@
 <br><br><br><br>
 
 <div class = movietable id="movietable">
+</div>
+
+</div> 
+
+<div class="scroll_cotainer"> 
+  <div class = "progress_bar" id="progress_bar"> 
+  </div>
 </div>
   <!-- JavaScript 파일을 포함 -->
   <script src="script.js"></script>
